--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     alias(libs.plugins.google.gms.google.services) apply false
 }
 
-// Az .env beolvasáshoz
+// A .env beolvasáshoz
 ext.getEnvValue = { String key ->
     def envFile = rootProject.file(".env")
     if (envFile.exists()) {
